Fixed the gap

--- a/src/App.css
+++ b/src/App.css
@@ -26,81 +26,21 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  min-width: 320px;
-  min-height: 100vh;
   background-color: var(--background-color);
   color: var(--font-color);
+  height: 100vh;
+  overflow: hidden;
 }
 
 .app {
   text-align: center;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   padding: 20px;
-}
-
-
-
-
-
-.chat-box {
-  display: flex;
-  align-items: center;
-  padding: 20px;
-  width: 100%; /* Adjusted width to 100% */
-  margin: 20px auto; /* Centered horizontally */
-  justify-content: center;
-}
-
-.chat-box input {
-  flex: 1;
-  padding: 15px;
-  font-size: 14px; /* Removed redundant font-size settings */
-  border: none;
-  border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
-  background-color: white;
-  outline: none;
-}
-
-.chat-box input:focus {
-  outline: none;
-}
-
-.footer {
-  padding: 10px;
-}
-
-.chat-box button {
-  border-radius: 50%;
-  border: 1px solid transparent;
-  background-color: var(--button-background);
-  padding: 10px;
-  color: var(--button-color);
-  cursor: pointer;
-  transition: background-color 0.3s;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.chat-box button:hover {
-  background-color: var(--button-background); /* same as background color to keep consistency */
-}
-
-.chat-box button:focus,
-.chat-box button:focus-visible {
-  outline: none;
-}
-
-.chat-box button svg {
-  width: 24px;
-  height: 24px;
-  color: var(--svg-color);
+  box-sizing: border-box;
 }
 
 h1 {
@@ -112,9 +52,15 @@ button:hover {
   border-color: white;
 }
 
-
 html, body {
   overflow: hidden;
+}
+
+.just-body{
+  display: flex;
+  flex-direction: column;
+  height: 70vh;
+  width: 80vw;
 }
 
 
