--- a/src/components/chatbot/chatbot.css
+++ b/src/components/chatbot/chatbot.css
@@ -1,122 +1,126 @@
 .chat-box {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-    height: 100%;
-    width: 100%;
-  }
-  
-  .intro-text {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .intro-text h1{
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    font-variation-settings: "width" 100;
-  }
-  
-  .intro-text p{
-    font-family: "Open Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings: "width" 100;
-  }
-  
-  .messages {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    max-height: 60vh;
-    overflow-y: auto;
-    flex-grow: 1;
-  }
-  
-  .message {
-    padding: 10px;
-    border-radius: 10px;
-    margin: 5px 0;
-    max-width: 80%;
-    word-break: break-word;
-  }
-  
-  .message.user {
-    align-self: flex-end;
-    background-color: #e1ffc7;
-  }
-  
-  .message.bot {
-    align-self: flex-start;
-    background-color: #f1f1f1;
-  }
-  
-  .input-container {
-    display: flex;
-    align-items: center;
-    width: 55rem;
-    padding: 10px;
-    background-color: var(--background-color);
-    position: relative;
-    bottom: 0;
-  
-  
-    position: fixed;
-  }
-  
-  .input-container input {
-    flex: 1;
-    padding: 15px;
-    font-size: 18px;
-    display: block;
-    box-sizing: border-box;
-    border: none;
-    border-radius: 8px;
-    font-size: 14px;
-    line-height: 30px;
-    margin-right: 12px;
-    font-weight: 400;
-    border: none;
-    border-radius: 8px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
-    padding: 10px;
-    background-color: white;
-    outline: none;
-  }
-  
-  input:focus{
-    outline: none;
-  }
-  
-  button {
-    border-radius: 50%;
-    border: 1px solid transparent;
-    background-color: var(--button-background);
-    padding: 10px;
-    color: var(--button-color);
-    cursor: pointer;
-    transition: background-color 0.3s;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  button:hover{
-    background-color: var(--button-background);
-  }
-  button:focus,
-  button:focus-visible {
-    outline: none;
-  }
-  
-  button svg {
-    width: 24px;
-    height: 24px;
-    color: var(--svg-color);
-  }
-  
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  height: 100%;
+  width: 100%;
+}
+
+.intro-text {
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.intro-text h1 {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 700;
+  margin-top: -20px;
+  font-style: normal;
+  font-variation-settings: "width" 100;
+}
+
+.intro-text p {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  margin-top: -10px;
+  font-variation-settings: "width" 100;
+}
+
+.messages {
+  display: flex;
+  flex-direction: column;
+  max-height: 60vh;
+  overflow-y: auto;
+  width: 100%;
+  flex-grow: 1;
+  padding: 10px;
+  box-sizing: border-box;
+}
+
+.message {
+  padding: 10px;
+  border-radius: 10px;
+  margin: 10px 0; /* Increase margin for more space between bubbles */
+  max-width: 45%;
+  word-break: break-word;
+}
+
+.message.user {
+  align-self: flex-end;
+  background-color: #e1ffc7;
+  margin-left: auto;
+}
+
+.message.bot {
+  align-self: flex-start;
+  background-color: #f1f1f1;
+  margin-right: auto;
+}
+
+.input-container {
+  display: flex;
+  align-items: center;
+  width: 80%;
+  padding: 10px;
+  background-color: var(--background-color);
+  position: relative;
+  bottom: 0;
+  position: fixed;
+}
+
+.input-container input {
+  flex: 1;
+  padding: 15px;
+  font-size: 18px;
+  display: block;
+  box-sizing: border-box;
+  border: none;
+  border-radius: 8px;
+  font-size: 14px;
+  line-height: 30px;
+  margin-right: 12px;
+  font-weight: 400;
+  border: none;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2), 0 6px 20px rgba(0, 0, 0, 0.19);
+  padding: 10px;
+  background-color: white;
+  outline: none;
+}
+
+input:focus {
+  outline: none;
+}
+
+button {
+  border-radius: 50%;
+  border: 1px solid transparent;
+  background-color: var(--button-background);
+  padding: 10px;
+  color: var(--button-color);
+  cursor: pointer;
+  transition: background-color 0.3s;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button:hover {
+  background-color: var(--button-background);
+}
+
+button:focus,
+button:focus-visible {
+  outline: none;
+}
+
+button svg {
+  width: 24px;
+  height: 24px;
+  color: var(--svg-color);
+}
